--- a/ApControllerAdapter/Unifi/pom.xml
+++ b/ApControllerAdapter/Unifi/pom.xml
@@ -8,6 +8,13 @@
     <artifactId>unifi</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>Java.Net</id>
+            <url>http://download.java.net/maven/2/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>com.jive.apcontrolleradapter.webapi</groupId>
@@ -23,6 +30,11 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>2.11.3</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.3</version>
         </dependency>
     </dependencies>
 
