Commit unifi.properties for recording how we had it working right now

--- a/ApControllerAdapter/unifi/src/main/resources/unifi.properties
+++ b/ApControllerAdapter/unifi/src/main/resources/unifi.properties
@@ -1,6 +1,6 @@
-controllerHost=https://unifi.jive.com:8443
+controllerHost=https://unifi:8443
 mongoDbHost=localhost
-mongoDbPort=27117
+mongoDbPort=27017
 mail.smtp.host=emarkit-main
 mail.from=spena@emarkit.com
 apAlertSubject=Jive Wifi Alert
