--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<version>21</version>
 	</parent>
 
-	<groupId>com.jive.apcontrolleradapter</groupId>
+	<groupId>com.jive.managedwifi</groupId>
 	<artifactId>parent</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -18,6 +18,7 @@
 		<module>unifi</module>
 		<module>web</module>
 		<module>web-api</module>
+		<module>unifi-backup</module>
 	</modules>
 
     <dependencies>
