--- a/unifi/pom.xml
+++ b/unifi/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 	<parent>
-	    <groupId>com.jive.apcontrolleradapter</groupId>
+	    <groupId>com.jive.managedwifi</groupId>
 	    <artifactId>parent</artifactId>
 	    <version>1.0-SNAPSHOT</version>
 	</parent>
