--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -1,40 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-           xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-		  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-           version="2.5">
-
-    <filter>
-        <filter-name>Resteasy</filter-name>
-        <filter-class>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+  <filter>
+    <filter-name>Resteasy</filter-name>
+    <filter-class>
             org.jboss.resteasy.plugins.server.servlet.FilterDispatcher
         </filter-class>
-        <init-param>
-            <param-name>javax.ws.rs.Application</param-name>
-            <param-value>com.jive.apcontrolleradapter.web.api</param-value>
-        </init-param>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>Resteasy</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    
-<!--   <servlet>
-        <servlet-name>Resteasy</servlet-name>
-        <servlet-class>
-            org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher
-        </servlet-class>
-        <init-param>
-            <param-name>javax.ws.rs.Application</param-name>
-            <param-value>com.jive.apcontrolleradapter.web.api</param-value>
-        </init-param>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>Resteasy</servlet-name>
-        <url-pattern>/*</url-pattern>
-    </servlet-mapping>
--->
+    <init-param>
+      <param-name>javax.ws.rs.Application</param-name>
+      <param-value>com.jive.apcontrolleradapter.web.api</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>Resteasy</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
