[US4063] - Restructured. Put amazon stuff in own class.

--- a/unifi-backup/src/main/resources/aws.properties
+++ b/unifi-backup/src/main/resources/aws.properties
@@ -2,3 +2,4 @@ accessKey=AKIAJ6ZT7TTL2GDJLNAA
 secretKey=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
 bucket=jive-managed-wifi
 provider=aws-s3
+path=unifi_backups/
