--- a/unifi-backup/pom.xml
+++ b/unifi-backup/pom.xml
@@ -7,6 +7,16 @@
 		<artifactId>parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
+	
+	<artifactId>unifi-backup</artifactId>
+	
+	<configuration>
+	<archive>
+		<manifest>
+			<mainClass>com.jive.managed.wifi.backup.launcher</mainClass>
+		</manifest>
+	</archive>
+  </configuration>
 
 	<dependencies>
 		<dependency>
@@ -25,5 +35,4 @@
 		</dependency>
 	</dependencies>
 
-	<artifactId>unifi-backup</artifactId>
 </project>
