--- a/unifi-backup/pom.xml
+++ b/unifi-backup/pom.xml
@@ -7,16 +7,34 @@
 		<artifactId>parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	
+
 	<artifactId>unifi-backup</artifactId>
-	
-	<configuration>
-	<archive>
-		<manifest>
-			<mainClass>com.jive.managed.wifi.backup.launcher</mainClass>
-		</manifest>
-	</archive>
-  </configuration>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>com.jive.managed.wifi.backup.launcher</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 		<dependency>
