--- a/unifi-backup/pom.xml
+++ b/unifi-backup/pom.xml
@@ -15,23 +15,15 @@
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.jive.managedwifi.backup.Launcher</mainClass>
+						</manifest>
+					</archive>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
-					<archive>
-						<manifest>
-							<mainClass>com.jive.managed.wifi.backup.launcher</mainClass>
-						</manifest>
-					</archive>
 				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
