--- a/web/pom.xml
+++ b/web/pom.xml
@@ -14,7 +14,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.jive.apcontrolleradapter</groupId>
+			<groupId>com.jive.managedwifi</groupId>
 			<artifactId>unifi</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
