--- a/unifi-backup/src/main/resources/unifi.properties
+++ b/unifi-backup/src/main/resources/unifi.properties
@@ -1,6 +1,6 @@
 username=admin
-password=Jive123
+password=admin
 baseurl=https://localhost:8443
 cookie=/tmp/unifi_cookie
-filesavepath=/usr/lib/unifi_backups/
+filesavepath=/Users/joshbell/Desktop/
 days=7
