--- a/unifi/pom.xml
+++ b/unifi/pom.xml
@@ -21,7 +21,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.jive.apcontrolleradapter</groupId>
+            <groupId>com.jive.managedwifi</groupId>
             <artifactId>web-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
