--- a/unifi-backup/pom.xml
+++ b/unifi-backup/pom.xml
@@ -46,12 +46,12 @@
 		<dependency>
 			<groupId>org.apache.jclouds</groupId>
 			<artifactId>jclouds-blobstore</artifactId>
-			<version>1.7.3</version>
+			<version>1.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.jclouds.provider</groupId>
 			<artifactId>aws-s3</artifactId>
-			<version>1.7.3</version>
+			<version>1.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.inject</groupId>
@@ -71,6 +71,11 @@
 			<artifactId>log4j</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>15.0</version>
+      </dependency>
 	</dependencies>
 
 
