--- a/unifi-backup/src/main/resources/unifi.properties
+++ b/unifi-backup/src/main/resources/unifi.properties
@@ -1,6 +1,6 @@
 username=admin
-password=admin
+password=Jive123
 baseurl=https://localhost:8443
 cookie=/tmp/unifi_cookie
-filesavepath=/Users/joshbell/Desktop/
+filesavepath=/usr/lib/unifi_backups/
 days=7
