--- a/unifi-backup/pom.xml
+++ b/unifi-backup/pom.xml
@@ -13,7 +13,7 @@
 
   <build>
     <plugins>
-      <plugin> <!-- Will need UberJar until mail server starts running Debian -->
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>2.2</version>
