--- a/unifi-backup/pom.xml
+++ b/unifi-backup/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.jive.managedwifi</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <artifactId>unifi-backup</artifactId>
