--- a/unifi/pom.xml
+++ b/unifi/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.jive.managedwifi</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <artifactId>unifi</artifactId>
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>com.jive.managedwifi</groupId>
       <artifactId>web-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
