--- a/web-api/pom.xml
+++ b/web-api/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.jive.managedwifi</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <artifactId>web-api</artifactId>
